--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,69 @@
 /* style sheet */
 
 /* imports the Noto Sans Display font from google fonts to use within the style sheet */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@500&display=swap');
 
+/* sets the default font and font weight for all the elements on the page */
 * {
     font-family: 'Noto Sans Display', sans-serif;
+    font-weight: bolder;
+}
+
+/* sets base styles for header element */
+header {
+    background: darkgray;
+    display: flex;
+    padding: 1rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+/* sets base styles for the elements within navbar like the links */
+nav {
+    color: darkgray;
+    display: flex;
+}
+
+/* makes list items inline with each other and spaced evenly in their container */
+ul {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* gives the links in the navbar a cyan underline and determines space between each other */
+nav a {
+    text-decoration-style: underline;
+    text-decoration-color: cyan;
+    margin: .5rem;
+}
+
+/* changes the title on the navbar */
+h1 {
+    border-radius:15px;
+    padding: .5rem;
+    color:darkgray;
+    background: cyan;
+    font-size: 2rem;
+}
+
+/* Puts header and navbar items into a stacked column when on a smaller screen */
+@media screen and (max-width:591px) {
+        header {
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        nav {
+            margin: 1rem;
+            font-size: 1.5rem;
+            line-height: 2rem;
+        }
+        nav ul {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+        }
 }
