--- a/assets/style.css
+++ b/assets/style.css
@@ -66,8 +66,15 @@ h1 {
     border-radius:15px;
     padding: .5rem;
     color:var(--white);
-    background: var(--charcoal);
+    background: var(--teal);
     font-size: 2rem;
+}
+
+.bkgr {
+    background-image: url(./waves.jpg);
+    background-position: center;
+    width:auto;
+    height: 6rem;
 }
 
 /* Puts header and navbar items into a stacked column when on a smaller screen */
