--- a/assets/style.css
+++ b/assets/style.css
@@ -121,10 +121,16 @@ h2{
     padding-left: .8rem;
 }
 
+/* adds text color, size, and positioning for contact links */
 .contact-link a {
     color: var(--teal);
-    
-
+    margin: 3rem;
+    text-align: center;
+    text-decoration: none;
+    position: relative;
+    top: 5rem;
+    left: 5rem;
+    font-size: 2rem;
 }
 
 /* background image for under the header */
@@ -147,6 +153,68 @@ h2{
         top:-1rem;
         position:relative;
         
+    }
+
+    /* adds bouncing animation only for larger screens  */
+    .contact-link a {
+        transition: all 50ms ease-in;
+        display:inline-block;
+    }
+    
+    .contact-link a:hover {
+        /* other browsers */
+        animation: bounce 500ms infinite;
+        /* webkit browsers */
+       -webkit-animation: bounce 500ms infinite;
+       /* firefox */
+       -moz-animation: bounce 500ms infinite;
+       /* opera */
+       -o-animation: bounce 500ms infinite; 
+    }
+    
+    /* --- CSS3 Bounce Animation --- */
+
+    /* webkit browsers */
+    @-webkit-keyframes bounce {
+        0%,  
+        100% {
+           -webkit-transform: translateY(0);
+        } 
+        50% {
+            -webkit-transform: translateY(-15px);
+        }
+    }
+
+    /* mozilla browsers */
+    @-moz-keyframes bounce {
+        0%, 
+        100% {
+           -moz-transform: translateY(0);
+        }
+        50% {
+           -moz-transform: translateY(-15px);
+        }
+    }
+
+    /* opera browsers */
+    @-o-keyframes bounce {
+        0%,
+        100% {
+           -o-transform: translateY(0);
+        }
+        50% {
+           -o-transform: translateY(-15px);
+        }
+    }
+    /* other browsers */
+    @keyframes bounce {
+        0%,  
+        100% {
+            transform: translateY(0);
+        }
+        50% {
+            transform: translateY(-15px);
+        }
     }
 }
 
@@ -202,5 +270,15 @@ h2{
             padding:1rem;
             flex-direction: column;
             align-items: center;
+        }
+        /* puts contact links into a column and centers them on smaller screens */
+        .contact-link {
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            position:relative;
+            right: 5rem;
+            bottom: 5rem;
+            line-height: 2.5rem;
         }
 }
