[+] Fixed banner image  to spread the whole page

--- a/assets/style.css
+++ b/assets/style.css
@@ -218,6 +218,7 @@ a div:hover {
 .bkgr {
     background-image: url(./waves.jpg);
     background-position: center;
+    background-size:150rem;
     width:auto;
     height: 6rem;
 }
