[+]Added Mood Movie Project to portfolio

--- a/assets/style.css
+++ b/assets/style.css
@@ -191,8 +191,8 @@ a div:hover {
 }
 
 /* sets background image for the first placeholder */
-.placeholder1 {
-    background-image: url(./alvaro-reyes-qWwpHwip31M-unsplash.jpg);
+.work3 {
+    background-image: url(./images/mood-movie.png);
 }
 
 /* sets background image for the second placeholder */
